# ANF-to-MonadLC

./: CHANGELOG.md  README.md  lambdaIR.cabal  tests.txt
app/: Main.hs  Parser.hs  Translator.hs  converted.hs  entrada.lc  test.lc  test1.lc  test2.lc  test3.lc  test4.lc  test5.lc
dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
