cabal-version:      3.4
name:               lambdaIR
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             KarlaJoriatti
maintainer:         kjoriatti@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md
    Parser
    Translator

executable lambdaIR
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Parser
                   Translator

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0,
                      parsec ^>=3.1.14.0,
                      mtl ^>=2.2.2
    hs-source-dirs:   app
    default-language: Haskell2010